--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,16 @@ body{
 	color: #000;
 	font-family: 'roboto', sans-serif;
 }
-.logo{
-	height: 30px
-}
 .contenedor{
 	width: 85%;
 	max-width: 1000px;
 	margin: 25px auto;
 	display: grid;
 	grid-gap: 20px;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(3, auto);
 	grid-template-rows: repeat(4, auto)
 }
 .contenedor > div,
-.contenedor .encabezado,
 .contenedor .pie,
 .contenedor .Sidebar,
 .contenedor .contenido
@@ -32,8 +28,19 @@ body{
 .contenedor .encabezado{
 	background: rgb(97, 210, 255);
 	color: white;
-	grid-column-start: 1;
-	grid-column-end: 4;
+	grid-column: span 4;
+	display: flex;
+	align-items: center;
+}
+.contenedor .encabezado .cabeza{
+	display: flex;
+	align-items: center;
+	padding: 25px;
+	font-size: 13px
+}
+.contenedor .encabezado .cabeza > a >img{
+	padding-right: 15px;
+	height: 45px
 }
 .contenedor .contenido{
 	grid-column-start: 1;
@@ -41,26 +48,51 @@ body{
 }
 .contenedor .pie{
 	grid-column-start: 1;
-	grid-column-end: 4;
+	grid-column-end: 5;
 }
 .witget-1{
-	grid-column-start: 1;
-	grid-column-end: 2;
+	grid-column-start: 3;
+	grid-column-end: 5;
+	min-width: 250px
 }
 .contenedor .Sidebar{
 	grid-column-start: 2;
-	grid-column-end: 4;
+	grid-column-end: 3;
+	min-width: 250px
+}
+.contenedor .contenido .perfil{
+	display: grid;
+	place-items: center;
+}
+.contenedor .contenido .perfil .img{
+	border-radius: 50%;
+	padding-bottom: 10px;
+	height: 115px 
+}
+.contenedor .contenido .perfil .name{
+	font-family:'Times New Roman', Times, serif;
+	font-weight: bold;
+	font-size: 26px;
+	padding-bottom: 15px
 }
 
-@media screen and (max-width: 670px){
+
+@media screen and (max-width: 980px){
 	.contenedor .contenido{
 		grid-column-start: 1;
-		grid-column-end: 4;
+		grid-column-end: 5;
 
 	}
 	.contenedor .Sidebar{
 		grid-column-start: 1;
-		grid-column-end: 4;
+		grid-column-end: 5;
+	}
+	.contenedor .witget-1{
+		grid-column-start: 1;
+		grid-column-end: 5
+	}
+	.contenedor .witget-2{
+		grid-column-start: 1;
+		grid-column-end: 5
 	}
 }
-
