--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,42 @@ body{
 	font-size: 26px;
 	padding-bottom: 15px
 }
+table{
+	text-align: left;
+	display: grid;
+	place-items: left;
+	border-collapse: collapse;
+}
+
+.med, .u{
+	padding-right: 30px;
+	padding-left: 5px;
+	/*border: 1px solid black*/
+}
+
+/*.uhr{
+	
+	border: 1px solid black;
+}*/
+.t1{
+	padding-bottom: 5px;
+	display: grid;
+	place-items: center;
+}
+.t{
+	padding-bottom: 5px;
+	padding-top: 10px;
+	display: grid;
+	place-items: center;
+}
+.contacto, .datos-medicos{
+	max-width: 250px;
+}
+.Sidebar{
+	display: grid;
+	place-items: center;
+}
+
 @media screen and (max-width: 980px){
 	.contenedor .contenido{
 		grid-column-start: 1;
@@ -87,14 +123,17 @@ body{
 	}
 	.contenedor .witget-1{
 		grid-column-start: 1;
-		grid-column-end: 5
+		grid-column-end: 2
 	}
 	.contenedor .witget-2{
-		grid-column-start: 1;
+		grid-column-start: 2;
 		grid-column-end: 5
 	}
 
 }
+
+
+
 @media screen and (max-width: 636px){
 	.contenedor .contenido{
 		grid-column-start: 1;
@@ -107,7 +146,7 @@ body{
 	}
 	.contenedor .witget-1{
 		grid-column-start: 1;
-		grid-column-end: 5
+		grid-column-end: 5;
 	}
 	.contenedor .witget-2{
 		grid-column-start: 1;
